# iric-solver

./: .gitignore  CMakeLists.txt  copy.bat  definition.xml  go.bat  iric-solver.sln  iric-solver.vfproj  m_calc_main.f90  m_const.f90  m_global.f90  m_output_result.f90  m_set_conditions.f90  main.f90
.github/workflows/: build.yml
